Some changes on graphical output (colors)
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@7824 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: 3a95390af08959e226ca71e31be489484044b024